[package]
name = "bwd"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["compilers"]
categories = ["compilers"]
description = "Backwards linked-lists"
repository = "https://github.com/ToposInstitute/bwd.git"
homepage = "https://github.com/ToposInstitute/bwd"
readme = "README.md"

[dependencies]
